<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        if (Schema::hasTable('banned_words')) {
            return;
        }

        Schema::create('banned_words', function (Blueprint $table) {
            $table->id();
            $table->string('word', 255)->unique();
            $table->foreignId('created_by')->nullable()->constrained('users')->nullOnDelete();
            $table->timestamps();
            $table->index('word');
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('banned_words');
    }
};
